--- a/app/templates/machines/hist.html
+++ b/app/templates/machines/hist.html
@@ -4,7 +4,10 @@
 
 {% block content %}
 
+
 {% include 'components/notification.html' %}
+
+
 
 <form method="POST">
 
@@ -14,26 +17,28 @@
         <div class="input-group-prepend">
             <label class="input-group-text" for="select_produto">Produto</label>
         </div>
-        <select id="select_produto" class="mr-2">
+        <select id="select_produto" class="mr-2 form-control selectpicker">
             <option value="%" selected>Todos</option>
         </select>
 
         <div class="input-group-prepend">
             <label class="input-group-text" for="select_loja">Loja</label>
         </div>
-        <select id="select_loja" class="mr-2">
+        <select id="select_loja" class="mr-2 form-control selectpicker">
             <option value="%" selected>Todos</option>
         </select>
 
         <div class="input-group-prepend">
             <label class="input-group-text" for="date_data_extracao_start">Data Inicial</label>
         </div>
-        <input type="date" id="date_data_extracao_start" class="mr-2" style="width: 150px;">
+        <input type="date" id="date_data_extracao_start"
+               class="mr-2 form-control" style="width: 150px;">
 
         <div class="input-group-prepend">
             <label class="input-group-text" for="date_data_extracao_end">Data Final</label>
         </div>
-        <input type="date" id="date_data_extracao_end" class="mr-2" style="width: 150px;">
+        <input type="date" id="date_data_extracao_end"
+               class="mr-2 form-control" style="width: 150px;">
 
 
     </div>
@@ -42,11 +47,13 @@
 
 
 
-    <table class="table rounded mt-2 table-sm">
+<!--    <table class="table rounded mt-2 table-sm">-->
+    <div class="table-responsive">
+    <table class="table table-shopping">
         <thead id="table-header-ajax" class="thead"></thead>
         <tbody id="table_body_ajax"></tbody>
     </table>
-
+    </div>
     {% include 'components/pagination.html' %}
 
 
